--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,10 +1,13 @@
 <h1>Books</h1>
-<%= @books.each do |book| %>
+<% @books.each do |book| %>
 
   <p>title</p>
   <span><%= book.title %></span>
   <p>body</p>
   <span><%= book.body %></span>
+  
+  <%= link_to book.title, book_path(book.id) %>
+  
 <% end %>
 
 <h2>New book</h2>
