--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,14 @@
-<h1>show</h1>
-<h2>タイトル</h2>
-<p><%= @book.title %></p>
+<div>
+  <%= flash[:notice] %>
+ 
+</div>
 
-<h2>本文</h2>
-<p><%= @book.body %></p>
+<p>Title: <%= @book.title %></p>
+  
+<p>Body: <%= @book.body %></p>
+  
+<p>
+  <%= link_to "Edit", edit_book_path(@book.id) %>
+  |
+  <a href="/books/index">Back</a>
+</p>
