--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,22 +1,32 @@
 <h1>Books</h1>
-<% @books.each do |book| %>
-
-  <p>title</p>
-  <span><%= book.title %></span>
-  <p>body</p>
-  <span><%= book.body %></span>
-  
-  <%= link_to book.title, book_path(book.id) %>
-  
-<% end %>
+<table>
+	<thead>
+		<tr>
+			<th>title</th>
+			<th>body</th>
+		</tr>
+	</thead>
+	<tbody>
+		<% @books.each do |book| %>
+		<tr>
+			<td><%= book.title %></td>
+			<td><%= book.body %></td>
+			<td><%= link_to "Show", book_path(book.id) %></td>
+			<td><%= link_to "Edit", edit_book_path(book) %></td>
+			<td><%= link_to "Destroy", book_path(book[:id]), method: :delete, "data-confirm" => "Are you sure?" %></td>
+		</tr>
+		<% end %>
+	</tbody>
+</table>
 
 <h2>New book</h2>
+
 <%= form_with model: Book.new do |f| %>
   <h5>Title</h5>
   <%= f.text_field :title %>
-	
+
   <h5>body</h5>
   <%= f.text_area :body %>
-	
+
   <%= f.submit 'Create Book' %>
 <% end %>
