--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -20,6 +20,19 @@
 </table>
 
 <h2>New book</h2>
+<%= form_with model: @book do |form| %> 
+    <% if @book.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@book.errors.count, "error") %> prohibited this product from being saved:</h2>
+
+        <ul>
+          <% @book.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+  <% end %>
 
 <%= form_with model: Book.new do |f| %>
   <h5>Title</h5>
