--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -10,7 +10,5 @@
 <p>
   <%= link_to "Edit", edit_book_path(@book.id) %>
   |
-  <a href="/books/index">Back</a>
+  <%= link_to "Back", books_path %>
 </p>
-=======
-<h2>show</h2>
