--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Book</h1>
-<%= form_with(model:@book, local: true) do |form| %> <!--バリデーションチェック-->
-  <% if @book.errors.any? %> <!--ここからエラ〜メッセージ-->
+<%= form_with(model:@book, local: true) do |form| %>
+  <% if @book.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@book.errors.count, "error") %> prohibited this product from being saved:</h2>
 
@@ -26,6 +26,6 @@
   <p>
     <%= link_to "Show", book_path(@book.id) %>
      |
-    <a href="/books/index">Back</a>
+    <%= link_to "Back", books_path %>
   </p>
 <% end %>
