--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <h1>
   ようこそBookersへ！
 </h1>
@@ -9,8 +8,5 @@
   印象を共有し交換することができます
 </p>
 <p>
-  <a href="/books/index">start</a>
+  <%= link_to "start", books_path %>
 </p>
-=======
-<h1>ようこそ Bookers へ !</h1>
->>>>>>> origin/main
